# bcbioBase 0.2.17 (2018-07-09)

## Major changes

- Heatmap functions (`plotHeatmap()`, `plotCorrelationHeatmap()`, and
  `plotQuantileHeatmap()`) now only provide method support for
  `SummarizedExperiment` class objects, for better simplicity and metadata
  handling. The internal method code has been consolidated and simplified,
  working internally on the main assay inside the S4 object.

## Minor changes

- Now requiring [ggplot2][] v3.0 internally.
- Switched to using `aes()` instead of `aes_string()` internally, using
  tidyeval.
- Updated viridis functions in reexports.



# bcbioBase 0.2.16 (2018-06-28)

## Minor changes

- Improved aggregate column handling in `bcbio_geom_abline()`.
- Improved code coverage back to 100%.
- Reorganized R methods files to use `-methods.R` as a suffix, as recommended
  by [Bioconductor][], in preparation for package submission.



# bcbioBase 0.2.15 (2018-06-05)

## New functions

- `minimalSampleData()` enables easy creation of a sample metadata `data.frame`
  by simplify specifying the sample names (e.g. "description" in [bcbio][]
  YAML). This function was added for easy metadata handling for 10X Cell Ranger
  in the [bcbioSingleCell][] package, but is generally applicable to other
  [bcbio][] datasets and may be incorporated into [bcbioRNASeq][] in a future
  update.

## Minor changes

- Improved internal `interestingGroups` handling inside `plotHeatmap()` family
  of functions.
- Removed message about transgeneNames and spikeNames in 
  `prepareSummarizedExperiment()` if missing transcripts are present. Now the
  function simply lists the genes that don't have metadata in `rowRanges()`.
- Reorganized assert checks imports in `bcbioBase-package.R` file.



# bcbioBase 0.2.14 (2018-05-18)

## Minor changes

- Improved formatting of package NEWS
- Improved code coverage by adding ggplot2 unit testing.
- Added `sampleData<-` method support for standard `data.frame`.



# bcbioBase 0.2.13 (2018-05-07)

## Minor changes
