@@ -18,7 +18,6 @@ export(bcbio_geom_label_repel)
 export(checkInterestingGroups)
 export(copyToDropbox)
 export(flatFiles)
-export(gene2symbol)
 export(ggplot)
 export(glimpse)
 export(inferno)
@@ -79,7 +78,6 @@ export(scale_fill_manual)
 export(scale_fill_viridis)
 export(scale_fill_viridis_c)
 export(scale_fill_viridis_d)
-export(selectSamples)
 export(separatorBar)
 export(tibble)
 export(uniteInterestingGroups)
@@ -87,17 +85,14 @@ export(updateMessage)
 export(viridis)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
-exportMethods(convertGenesToSymbols)
 exportMethods(counts)
 exportMethods(flatFiles)
-exportMethods(gene2symbol)
 exportMethods(interestingGroups)
 exportMethods(plotCorrelationHeatmap)
 exportMethods(plotHeatmap)
 exportMethods(plotQuantileHeatmap)
 exportMethods(sampleData)
 exportMethods(sampleNames)
-exportMethods(selectSamples)
 exportMethods(uniteInterestingGroups)
 importFrom(Biobase,sampleNames)
 importFrom(BiocGenerics,counts)
@@ -160,11 +155,9 @@ importFrom(assertive.types,is_a_string)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAnImplicitInteger)
-importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsHexColorFunctionOrNULL)
 importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
-importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,emptyRanges)
 importFrom(basejump,fixNA)
 importFrom(basejump,localOrRemoteFile)
