@@ -18,10 +18,9 @@
 #'   assert_is_character assert_is_factor assert_is_function assert_is_integer
 #'   assert_is_list assert_is_matrix assert_is_tbl is_a_string
 #' @importFrom basejump assertHasRownames assertIsAnImplicitInteger
-#'   assertIsAStringOrNULL assertIsGene2symbol assertIsHexColorFunctionOrNULL
-#'   assertIsTx2gene camel convertGenesToSymbols emptyRanges fixNA
-#'   localOrRemoteFile makeNames printString readFileByExtension readYAML
-#'   removeNA snake
+#'   assertIsAStringOrNULL assertIsHexColorFunctionOrNULL assertIsTx2gene camel
+#'   emptyRanges fixNA localOrRemoteFile makeNames printString
+#'   readFileByExtension readYAML removeNA snake
 #' @importFrom Biostrings reverseComplement
 #' @importFrom dendsort dendsort
 #' @importFrom dplyr arrange everything funs group_by left_join mutate
