@@ -29,11 +29,10 @@ class(x)
 names(x)
 }
 \seealso{
-Other Data Functions: \code{\link{convertGenesToSymbols}},
-  \code{\link{counts}}, \code{\link{gene2symbol}},
+Other Data Functions: \code{\link{counts}},
   \code{\link{minimalSampleData}},
   \code{\link{sampleData}}, \code{\link{sampleDirs}},
-  \code{\link{sampleNames}}, \code{\link{selectSamples}},
+  \code{\link{sampleNames}},
   \code{\link{uniteInterestingGroups}}
 }
 \author{
