@@ -1,38 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/gene2symbol-methods.R
-\docType{methods}
-\name{gene2symbol}
-\alias{gene2symbol}
-\alias{gene2symbol}
-\alias{gene2symbol,SummarizedExperiment-method}
-\title{Gene to Symbol Mappings}
-\usage{
-gene2symbol(object)
-
-\S4method{gene2symbol}{SummarizedExperiment}(object)
-}
-\arguments{
-\item{object}{Object.}
-}
-\value{
-\code{data.frame} containing gene identifier and gene name (aka symbol)
-mappings.
-}
-\description{
-Gene to Symbol Mappings
-}
-\examples{
-# SummarizedExperiment ====
-gene2symbol(rse_bcb) \%>\% head()
-}
-\seealso{
-Other Data Functions: \code{\link{convertGenesToSymbols}},
-  \code{\link{counts}}, \code{\link{flatFiles}},
-  \code{\link{minimalSampleData}},
-  \code{\link{sampleData}}, \code{\link{sampleDirs}},
-  \code{\link{sampleNames}}, \code{\link{selectSamples}},
-  \code{\link{uniteInterestingGroups}}
-}
-\author{
-Michael Steinbaugh
-}
