@@ -66,12 +66,9 @@ glimpse(sampleData(x))
 \seealso{
 \link{metadataBlacklist}.
 
-Other Data Functions: \code{\link{convertGenesToSymbols}},
-  \code{\link{counts}}, \code{\link{flatFiles}},
-  \code{\link{gene2symbol}},
-  \code{\link{minimalSampleData}},
+Other Data Functions: \code{\link{counts}},
+  \code{\link{flatFiles}}, \code{\link{minimalSampleData}},
   \code{\link{sampleDirs}}, \code{\link{sampleNames}},
-  \code{\link{selectSamples}},
   \code{\link{uniteInterestingGroups}}
 }
 \author{
