@@ -17,12 +17,9 @@ sampleNames(rse_bcb)
 sampleNames(rse_dds)
 }
 \seealso{
-Other Data Functions: \code{\link{convertGenesToSymbols}},
-  \code{\link{counts}}, \code{\link{flatFiles}},
-  \code{\link{gene2symbol}},
-  \code{\link{minimalSampleData}},
+Other Data Functions: \code{\link{counts}},
+  \code{\link{flatFiles}}, \code{\link{minimalSampleData}},
   \code{\link{sampleData}}, \code{\link{sampleDirs}},
-  \code{\link{selectSamples}},
   \code{\link{uniteInterestingGroups}}
 }
 \author{
